[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medicheck-pro-enterprise"
version = "1.0.0"
description = "Advanced multi-agent medical assistant system"
readme = "README.md"
authors = [{name = "Medical AI Team", email = "team@medicheck.ai"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "streamlit>=1.28.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "openai>=1.3.0",
    "langchain>=0.0.339",
    "langchain-community>=0.0.38",
    "langchain-openai>=0.0.5",
    "llama-index>=0.10.15",
    "chromadb>=0.4.15",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.2",
    "pymongo>=4.6.0",
    "redis>=5.0.1",
    "sqlalchemy>=2.0.23",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-instrumentation>=0.42b0",
    "prometheus-client>=0.19.0",
    "asyncio-mqtt>=0.11.1",
    "concurrent-log-handler>=0.9.20",
    "pyyaml>=6.0.1",
    "tqdm>=4.66.1",
    "python-slugify>=8.0.1",
    "cryptography>=41.0.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.10.1",
    "flake8>=6.0.0",
    "mypy>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/medicheck/medicheck-pro-enterprise"
Repository = "https://github.com/medicheck/medicheck-pro-enterprise"

[tool.setuptools.packages.find]
where = ["."]
include = ["medicheck*"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true